--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" 
         rel="stylesheet" type="text/css">
-  <link rel="stylesheet" 
-        href="style.css" type="text/css" 
+  <link rel="stylesheet" href="style.css"
         media="screen" charset="utf-8">
 </HEAD>
 <body>
@@ -53,6 +52,6 @@
       </li>
     </ul>
   </div>
-  <script type="text/javascript" src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
