--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" 
-        rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="style.css"
-        media="screen" charset="utf-8">
+        rel="stylesheet" 
+        type="text/css">
+  <link rel="stylesheet" 
+        href="style.css"
+        media="screen" 
+        charset="utf-8">
 </HEAD>
 <body>
   <div class="aaa">
