--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         href="style.css"
         media="screen" 
         charset="utf-8">
-</HEAD>
+</head>
 <body>
   <div class="aaa">
     <img src="./eisenhower-matrix.jpg">
