--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         charset="utf-8">
 </head>
 <body>
-  <div class="aaa">
+  <div class="matrix">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more-inf" 
+    <a class="matrix__more-inf" 
        href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
