refactor: replacing names of classes and ID with short names according to rule 3.3

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <a class="matrix__more-inf" 
        href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="top-section-for-adding-element-to-list">
+  <div class="task-bar">
+    <p id="add-tasks">
       <label for="new-task">Add Item</label>
       <input id="new-task" type="text">
       <button>Add</button>
