refactor: restructure semantic tags according to rule HTML 1.1

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         charset="utf-8">
 </head>
 <body>
-  <div class="matrix">
+  <aside class="matrix">
     <img src="./eisenhower-matrix.jpg">
     <a class="matrix__more-inf" 
        href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="task-bar">
-    <p id="add-tasks">
+  </aside>
+  <main class="task-bar">
+    <section id="add-tasks">
       <label for="new-task">Add Item</label>
       <input id="new-task" type="text">
       <button>Add</button>
-    </p>
+    </section>
     <h3>Todo</h3>
     <ul id="incomplete-tasks">
       <li><input type="checkbox">
@@ -54,7 +54,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
