--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <aside class="matrix">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
     <a class="matrix__more-inf" 
        href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </aside>
@@ -29,7 +29,7 @@
         <input type="text">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="">
         </button>
       </li>
       <li class="edit-mode">
@@ -38,7 +38,7 @@
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="">
         </button>
       </li>
     </ul>
@@ -50,7 +50,7 @@
         <input type="text">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="">
         </button>
       </li>
     </ul>
