--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
        href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </aside>
   <main class="task-bar">
-    <section id="add-tasks">
-      <label for="new-task">Add Item</label>
-      <input id="new-task" type="text">
+    <section class="add-tasks">
+      <label for="add-tasks__input">Add Item</label>
+      <input class="add-tasks__input" type="text">
       <button>Add</button>
     </section>
     <h3>Todo</h3>
-    <ul id="incomplete-tasks">
-      <li><input type="checkbox">
+    <ul class="incomplete-tasks">
+      <li class = incomplete-tasks__item><input type="checkbox">
         <label class="task">Pay Bills</label>
         <input type="text">
         <button class="edit">Edit</button>
@@ -32,7 +32,7 @@
           <img src="./remove.svg" alt="">
         </button>
       </li>
-      <li class="edit-mode">
+      <li class="incomplete-tasks__item tasks__edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
@@ -43,8 +43,8 @@
       </li>
     </ul>
     <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
+    <ul class="completed-tasks">
+      <li class="completed-tasks__item">
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
         <input type="text">
