--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </section>
     <h3>Todo</h3>
     <ul class="incomplete-tasks">
-      <li class = incomplete-tasks__item><input type="checkbox">
+      <li class = incomplete-tasks__item>
+        <input type="checkbox">
         <label class="task">Pay Bills</label>
         <input type="text">
         <button class="edit">Edit</button>
