--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main class="task-bar">
     <section class="add-tasks">
       <label for="add-tasks__input">Add Item</label>
-      <input class="add-tasks__input" type="text">
+      <input id="add-tasks__input" type="text">
       <button>Add</button>
     </section>
     <h3>Todo</h3>
